<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfilFragment"
    android:background="@color/colorBase">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBase">

        <ImageView
            android:id="@+id/imageprofil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/user"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernamebig"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_marginVertical="250dp"
        tools:ignore="UnusedAttribute"
        android:background="#464646">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            tools:ignore="UseCompoundDrawables"
            android:background="@color/colorBase">

            <ImageView
                android:id="@+id/advise"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@drawable/advise" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/tentang_penggunaan_aplikasi"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/line1"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables"
            android:background="@color/colorBase">

            <ImageView
                android:id="@+id/ask"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@drawable/question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/cara_penggunaan_aplikasi"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>